--- a/app/components/data/opensheet-data.html
+++ b/app/components/data/opensheet-data.html
@@ -25,10 +25,7 @@
         },
 
         _initializeOpenSheet: function(e){
-            this.openSheet = {
-                index: null,
-                sheet: null
-            };
+            this.openSheet = { };
         }
     });
 </script>
